// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`skeleton demos > 📸 renders ./packages/skeleton/src/demos/descriptions.tsx correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-app"
  >
    <div>
      test
    </div>
    <div
      style="background: rgb(250, 250, 250); padding: 24px;"
    >
      <div
        style="width: 100%;"
      >
        <div
          style="margin-block-end: 16px;"
        >
          <div
            class="ant-skeleton"
          >
            <div
              class="ant-skeleton-content"
            >
              <h3
                class="ant-skeleton-title"
                style="width: 185px;"
              />
            </div>
          </div>
          <div
            class="ant-skeleton ant-skeleton-element ant-skeleton-active"
          >
            <span
              class="ant-skeleton-button ant-skeleton-button-sm"
            />
          </div>
        </div>
        <div
          class="ant-card"
          style="border-start-end-radius: 0; border-top-left-radius: 0;"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active"
            >
              <span
                class="ant-skeleton-button ant-skeleton-button-sm"
                style="width: 100px; margin-block-end: 16px;"
              />
            </div>
            <div
              style="width: 100%; justify-content: space-between; display: flex;"
            >
              <div
                style="flex: 1; padding-inline-start: 0; padding-inline-end: 0;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="margin-block-start: 0;"
                    />
                  </div>
                </div>
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="margin-block-start: 8px;"
                    />
                  </div>
                </div>
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="margin-block-start: 8px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              style="margin-block-start: 32px;"
            >
              <div
                class="ant-skeleton ant-skeleton-element ant-skeleton-active"
              >
                <span
                  class="ant-skeleton-button ant-skeleton-button-sm"
                  style="width: 100px; margin-block-end: 16px;"
                />
              </div>
              <div
                style="width: 100%; justify-content: space-between; display: flex;"
              >
                <div
                  style="flex: 1; margin-inline-end: 24px; max-width: 300px;"
                >
                  <div
                    class="ant-skeleton ant-skeleton-active"
                  >
                    <div
                      class="ant-skeleton-content"
                    >
                      <h3
                        class="ant-skeleton-title"
                        style="margin-block-start: 0;"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-skeleton ant-skeleton-active"
                  >
                    <div
                      class="ant-skeleton-content"
                    >
                      <h3
                        class="ant-skeleton-title"
                        style="margin-block-start: 8px;"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-skeleton ant-skeleton-active"
                  >
                    <div
                      class="ant-skeleton-content"
                    >
                      <h3
                        class="ant-skeleton-title"
                        style="margin-block-start: 8px;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  style="flex: 1; align-items: center; justify-content: center;"
                >
                  <div
                    style="max-width: 300px; margin: auto;"
                  >
                    <div
                      class="ant-skeleton ant-skeleton-active"
                    >
                      <div
                        class="ant-skeleton-content"
                      >
                        <h3
                          class="ant-skeleton-title"
                          style="margin-block-start: 0;"
                        />
                      </div>
                    </div>
                    <div
                      class="ant-skeleton ant-skeleton-active"
                    >
                      <div
                        class="ant-skeleton-content"
                      >
                        <h3
                          class="ant-skeleton-title"
                          style="margin-block-start: 8px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="padding: 0px 24px;"
        >
          <div
            class="ant-divider ant-divider-horizontal"
            role="separator"
            style="margin: 0px;"
          />
        </div>
        <div
          class="ant-card"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active"
            >
              <span
                class="ant-skeleton-button ant-skeleton-button-sm"
                style="width: 100px; margin-block-end: 16px;"
              />
            </div>
            <div
              style="display: flex; background: rgba(0, 0, 0, 0.02); padding: 24px 8px;"
            >
              <div
                style="flex: 1; padding-inline-start: 0; padding-inline-end: 32px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 75px; margin: 0px; height: 24px;"
                    />
                  </div>
                </div>
              </div>
              <div
                style="flex: 3; padding-inline-start: 32px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 75px; margin: 0px; height: 24px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              style="padding: 0px 0px;"
            >
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
                style="margin: 0px;"
              />
            </div>
            <div
              style="display: flex; background: none; padding: 24px 8px;"
            >
              <div
                style="flex: 1; padding-inline-start: 20px; padding-inline-end: 32px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100%; margin: 0px; height: 24px;"
                    />
                  </div>
                </div>
              </div>
              <div
                style="flex: 3; padding-inline-start: 32px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100%; margin: 0px; height: 24px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              style="padding: 0px 0px;"
            >
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
                style="margin: 0px;"
              />
            </div>
            <div
              style="display: flex; background: none; padding: 24px 8px;"
            >
              <div
                style="flex: 1; padding-inline-start: 20px; padding-inline-end: 32px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100%; margin: 0px; height: 24px;"
                    />
                  </div>
                </div>
              </div>
              <div
                style="flex: 3; padding-inline-start: 32px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100%; margin: 0px; height: 24px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              style="padding: 0px 0px;"
            >
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
                style="margin: 0px;"
              />
            </div>
            <div
              style="display: flex; background: none; padding: 24px 8px;"
            >
              <div
                style="flex: 1; padding-inline-start: 20px; padding-inline-end: 32px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100%; margin: 0px; height: 24px;"
                    />
                  </div>
                </div>
              </div>
              <div
                style="flex: 3; padding-inline-start: 32px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100%; margin: 0px; height: 24px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              style="padding: 0px 0px;"
            >
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
                style="margin: 0px;"
              />
            </div>
            <div
              style="display: flex; background: none; padding: 24px 8px;"
            >
              <div
                style="flex: 1; padding-inline-start: 20px; padding-inline-end: 32px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100%; margin: 0px; height: 24px;"
                    />
                  </div>
                </div>
              </div>
              <div
                style="flex: 3; padding-inline-start: 32px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100%; margin: 0px; height: 24px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              style="padding: 0px 0px;"
            >
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
                style="margin: 0px;"
              />
            </div>
            <div
              style="display: flex; justify-content: flex-end; padding-block-start: 16px;"
            >
              <div
                class="ant-skeleton ant-skeleton-active"
              >
                <div
                  class="ant-skeleton-content"
                >
                  <h3
                    class="ant-skeleton-title"
                    style="margin: 0px; height: 32px; float: right; max-width: 630px;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton demos > 📸 renders ./packages/skeleton/src/demos/list.static.tsx correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-app"
  >
    <div>
      test
    </div>
    <div
      style="background: rgb(250, 250, 250); padding: 24px;"
    >
      <div
        style="width: 100%;"
      >
        <div
          style="margin-block-end: 16px;"
        >
          <div
            class="ant-skeleton"
          >
            <div
              class="ant-skeleton-content"
            >
              <h3
                class="ant-skeleton-title"
                style="width: 185px;"
              />
            </div>
          </div>
          <div
            class="ant-skeleton ant-skeleton-element ant-skeleton-active"
          >
            <span
              class="ant-skeleton-button ant-skeleton-button-sm"
            />
          </div>
        </div>
        <div
          class="ant-card"
          style="margin-block-end: 16px;"
        >
          <div
            class="ant-card-body"
          >
            <div
              style="width: 100%; justify-content: space-between; display: flex;"
            >
              <div
                style="padding-inline-start: 0; flex: 1; margin-inline-end: 16px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100px; margin-block-start: 0;"
                    />
                  </div>
                </div>
                <div
                  class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                >
                  <span
                    class="ant-skeleton-button"
                    style="height: 48px;"
                  />
                </div>
              </div>
              <div
                style="padding-inline-start: 16px; flex: 1; margin-inline-end: 0;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100px; margin-block-start: 0;"
                    />
                  </div>
                </div>
                <div
                  class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                >
                  <span
                    class="ant-skeleton-button"
                    style="height: 48px;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-card"
        >
          <div
            class="ant-card-body"
            style="padding: 0px;"
          >
            <div
              class="ant-card"
              style="border-bottom-right-radius: 0; border-bottom-left-radius: 0;"
            >
              <div
                class="ant-card-body"
                style="padding-block-end: 8px;"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                  style="width: 100%; justify-content: space-between;"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                    >
                      <span
                        class="ant-skeleton-button ant-skeleton-button-sm"
                        style="width: 200px;"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                        >
                          <span
                            class="ant-skeleton-button ant-skeleton-button-sm"
                            style="width: 120px;"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                        >
                          <span
                            class="ant-skeleton-button ant-skeleton-button-sm"
                            style="width: 80px;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-card"
            >
              <div
                class="ant-card-body"
                style="padding: 0px;"
              >
                <div
                  class="ant-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="padding: 24px;"
                  >
                    <div
                      style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
                    >
                      <div
                        style="max-width: 100%; flex: 1;"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-active"
                        >
                          <div
                            class="ant-skeleton-content"
                          >
                            <h3
                              class="ant-skeleton-title"
                              style="width: 100px; margin-block-start: 0;"
                            />
                            <ul
                              class="ant-skeleton-paragraph"
                              style="margin: 0px;"
                            >
                              <li
                                style="width: 61%;"
                              />
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-button ant-skeleton-button-sm"
                          style="width: 165px; margin-block-start: 12px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="padding: 0px 24px;"
                >
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin: 0px;"
                  />
                </div>
                <div
                  class="ant-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="padding: 24px;"
                  >
                    <div
                      style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
                    >
                      <div
                        style="max-width: 100%; flex: 1;"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-active"
                        >
                          <div
                            class="ant-skeleton-content"
                          >
                            <h3
                              class="ant-skeleton-title"
                              style="width: 100px; margin-block-start: 0;"
                            />
                            <ul
                              class="ant-skeleton-paragraph"
                              style="margin: 0px;"
                            >
                              <li
                                style="width: 61%;"
                              />
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-button ant-skeleton-button-sm"
                          style="width: 165px; margin-block-start: 12px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="padding: 0px 24px;"
                >
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin: 0px;"
                  />
                </div>
                <div
                  class="ant-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="padding: 24px;"
                  >
                    <div
                      style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
                    >
                      <div
                        style="max-width: 100%; flex: 1;"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-active"
                        >
                          <div
                            class="ant-skeleton-content"
                          >
                            <h3
                              class="ant-skeleton-title"
                              style="width: 100px; margin-block-start: 0;"
                            />
                            <ul
                              class="ant-skeleton-paragraph"
                              style="margin: 0px;"
                            >
                              <li
                                style="width: 61%;"
                              />
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-button ant-skeleton-button-sm"
                          style="width: 165px; margin-block-start: 12px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="padding: 0px 24px;"
                >
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin: 0px;"
                  />
                </div>
                <div
                  class="ant-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="padding: 24px;"
                  >
                    <div
                      style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
                    >
                      <div
                        style="max-width: 100%; flex: 1;"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-active"
                        >
                          <div
                            class="ant-skeleton-content"
                          >
                            <h3
                              class="ant-skeleton-title"
                              style="width: 100px; margin-block-start: 0;"
                            />
                            <ul
                              class="ant-skeleton-paragraph"
                              style="margin: 0px;"
                            >
                              <li
                                style="width: 61%;"
                              />
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-button ant-skeleton-button-sm"
                          style="width: 165px; margin-block-start: 12px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="padding: 0px 24px;"
                >
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin: 0px;"
                  />
                </div>
                <div
                  class="ant-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="padding: 24px;"
                  >
                    <div
                      style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
                    >
                      <div
                        style="max-width: 100%; flex: 1;"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-active"
                        >
                          <div
                            class="ant-skeleton-content"
                          >
                            <h3
                              class="ant-skeleton-title"
                              style="width: 100px; margin-block-start: 0;"
                            />
                            <ul
                              class="ant-skeleton-paragraph"
                              style="margin: 0px;"
                            >
                              <li
                                style="width: 61%;"
                              />
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-button ant-skeleton-button-sm"
                          style="width: 165px; margin-block-start: 12px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="padding: 0px 24px;"
                >
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin: 0px;"
                  />
                </div>
                <div
                  class="ant-card"
                  style="border-start-end-radius: 0; border-top-left-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="display: flex; align-items: center; justify-content: center;"
                  >
                    <div
                      class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                    >
                      <span
                        class="ant-skeleton-button ant-skeleton-button-sm"
                        style="width: 102px;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton demos > 📸 renders ./packages/skeleton/src/demos/list.tsx correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-app"
  >
    <div>
      test
    </div>
    <div
      style="background: rgb(250, 250, 250); padding: 24px;"
    >
      <div
        style="width: 100%;"
      >
        <div
          style="margin-block-end: 16px;"
        >
          <div
            class="ant-skeleton"
          >
            <div
              class="ant-skeleton-content"
            >
              <h3
                class="ant-skeleton-title"
                style="width: 185px;"
              />
            </div>
          </div>
          <div
            class="ant-skeleton ant-skeleton-element ant-skeleton-active"
          >
            <span
              class="ant-skeleton-button ant-skeleton-button-sm"
            />
          </div>
        </div>
        <div
          class="ant-card"
          style="margin-block-end: 16px;"
        >
          <div
            class="ant-card-body"
          >
            <div
              style="width: 100%; justify-content: space-between; display: flex;"
            >
              <div
                style="padding-inline-start: 0; flex: 1; margin-inline-end: 16px;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100px; margin-block-start: 0;"
                    />
                  </div>
                </div>
                <div
                  class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                >
                  <span
                    class="ant-skeleton-button"
                    style="height: 48px;"
                  />
                </div>
              </div>
              <div
                style="padding-inline-start: 16px; flex: 1; margin-inline-end: 0;"
              >
                <div
                  class="ant-skeleton ant-skeleton-active"
                >
                  <div
                    class="ant-skeleton-content"
                  >
                    <h3
                      class="ant-skeleton-title"
                      style="width: 100px; margin-block-start: 0;"
                    />
                  </div>
                </div>
                <div
                  class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                >
                  <span
                    class="ant-skeleton-button"
                    style="height: 48px;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-card"
        >
          <div
            class="ant-card-body"
            style="padding: 0px;"
          >
            <div
              class="ant-card"
              style="border-bottom-right-radius: 0; border-bottom-left-radius: 0;"
            >
              <div
                class="ant-card-body"
                style="padding-block-end: 8px;"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                  style="width: 100%; justify-content: space-between;"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                    >
                      <span
                        class="ant-skeleton-button ant-skeleton-button-sm"
                        style="width: 200px;"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                        >
                          <span
                            class="ant-skeleton-button ant-skeleton-button-sm"
                            style="width: 120px;"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                        >
                          <span
                            class="ant-skeleton-button ant-skeleton-button-sm"
                            style="width: 80px;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-card"
            >
              <div
                class="ant-card-body"
                style="padding: 0px;"
              >
                <div
                  class="ant-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="padding: 24px;"
                  >
                    <div
                      style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
                    >
                      <div
                        style="max-width: 100%; flex: 1;"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-active"
                        >
                          <div
                            class="ant-skeleton-content"
                          >
                            <h3
                              class="ant-skeleton-title"
                              style="width: 100px; margin-block-start: 0;"
                            />
                            <ul
                              class="ant-skeleton-paragraph"
                              style="margin: 0px;"
                            >
                              <li
                                style="width: 61%;"
                              />
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-button ant-skeleton-button-sm"
                          style="width: 165px; margin-block-start: 12px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="padding: 0px 24px;"
                >
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin: 0px;"
                  />
                </div>
                <div
                  class="ant-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="padding: 24px;"
                  >
                    <div
                      style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
                    >
                      <div
                        style="max-width: 100%; flex: 1;"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-active"
                        >
                          <div
                            class="ant-skeleton-content"
                          >
                            <h3
                              class="ant-skeleton-title"
                              style="width: 100px; margin-block-start: 0;"
                            />
                            <ul
                              class="ant-skeleton-paragraph"
                              style="margin: 0px;"
                            >
                              <li
                                style="width: 61%;"
                              />
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-button ant-skeleton-button-sm"
                          style="width: 165px; margin-block-start: 12px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="padding: 0px 24px;"
                >
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin: 0px;"
                  />
                </div>
                <div
                  class="ant-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="padding: 24px;"
                  >
                    <div
                      style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
                    >
                      <div
                        style="max-width: 100%; flex: 1;"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-active"
                        >
                          <div
                            class="ant-skeleton-content"
                          >
                            <h3
                              class="ant-skeleton-title"
                              style="width: 100px; margin-block-start: 0;"
                            />
                            <ul
                              class="ant-skeleton-paragraph"
                              style="margin: 0px;"
                            >
                              <li
                                style="width: 61%;"
                              />
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-button ant-skeleton-button-sm"
                          style="width: 165px; margin-block-start: 12px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="padding: 0px 24px;"
                >
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin: 0px;"
                  />
                </div>
                <div
                  class="ant-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="padding: 24px;"
                  >
                    <div
                      style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
                    >
                      <div
                        style="max-width: 100%; flex: 1;"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-active"
                        >
                          <div
                            class="ant-skeleton-content"
                          >
                            <h3
                              class="ant-skeleton-title"
                              style="width: 100px; margin-block-start: 0;"
                            />
                            <ul
                              class="ant-skeleton-paragraph"
                              style="margin: 0px;"
                            >
                              <li
                                style="width: 61%;"
                              />
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-button ant-skeleton-button-sm"
                          style="width: 165px; margin-block-start: 12px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="padding: 0px 24px;"
                >
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin: 0px;"
                  />
                </div>
                <div
                  class="ant-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="padding: 24px;"
                  >
                    <div
                      style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
                    >
                      <div
                        style="max-width: 100%; flex: 1;"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-active"
                        >
                          <div
                            class="ant-skeleton-content"
                          >
                            <h3
                              class="ant-skeleton-title"
                              style="width: 100px; margin-block-start: 0;"
                            />
                            <ul
                              class="ant-skeleton-paragraph"
                              style="margin: 0px;"
                            >
                              <li
                                style="width: 61%;"
                              />
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-button ant-skeleton-button-sm"
                          style="width: 165px; margin-block-start: 12px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="padding: 0px 24px;"
                >
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin: 0px;"
                  />
                </div>
                <div
                  class="ant-card"
                  style="border-start-end-radius: 0; border-top-left-radius: 0;"
                >
                  <div
                    class="ant-card-body"
                    style="display: flex; align-items: center; justify-content: center;"
                  >
                    <div
                      class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                    >
                      <span
                        class="ant-skeleton-button ant-skeleton-button-sm"
                        style="width: 102px;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton demos > 📸 renders ./packages/skeleton/src/demos/result.tsx correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-app"
  >
    <div>
      test
    </div>
    <div
      style="background: rgb(250, 250, 250); padding: 24px;"
    >
      <div
        style="width: 100%;"
      >
        <div
          style="margin-block-end: 16px;"
        >
          <div
            class="ant-skeleton"
          >
            <div
              class="ant-skeleton-content"
            >
              <h3
                class="ant-skeleton-title"
                style="width: 185px;"
              />
            </div>
          </div>
          <div
            class="ant-skeleton ant-skeleton-element ant-skeleton-active"
          >
            <span
              class="ant-skeleton-button ant-skeleton-button-sm"
            />
          </div>
        </div>
        <div
          class="ant-card ant-card-bordered"
        >
          <div
            class="ant-card-body"
          >
            <div
              style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 128px;"
            >
              <div
                class="ant-skeleton ant-skeleton-element"
              >
                <span
                  class="ant-skeleton-avatar ant-skeleton-avatar-circle"
                  style="width: 64px; height: 64px; line-height: 64px; margin-block-end: 32px;"
                />
              </div>
              <div
                class="ant-skeleton ant-skeleton-element ant-skeleton-active"
              >
                <span
                  class="ant-skeleton-button"
                  style="width: 214px; margin-block-end: 8px;"
                />
              </div>
              <div
                class="ant-skeleton ant-skeleton-element ant-skeleton-active"
              >
                <span
                  class="ant-skeleton-button ant-skeleton-button-sm"
                  style="width: 328px;"
                />
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                style="margin-block-start: 24px;"
              >
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                  >
                    <span
                      class="ant-skeleton-button"
                      style="width: 116px;"
                    />
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                  >
                    <span
                      class="ant-skeleton-button"
                      style="width: 116px;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
